@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2025/01/15 13:28:29 manu Exp $
+
+BLAKE2s (OpenBFDD-0.5.3.tar.gz) = 58e8844ba8ca4714677a6b967e13a25a229833771c8d9e95b6764760883c822e
+SHA512 (OpenBFDD-0.5.3.tar.gz) = 9cdd82da8132a1d829c77de76299e1ba966af955c4e1161fff92caa58a94a98e14463048de0953c286bc851700daf24b51def88fb9e2db4570d1eae57af90cbe
+Size (OpenBFDD-0.5.3.tar.gz) = 129817 bytes
