@@ -1,0 +1,4 @@
+#allow 10.0.1.2
+#allow 10.0.2.2
+#connect local 10.0.1.1 remote 10.0.1.2
+#connect local 10.0.2.1 remote 10.0.2.2
